# dslang

./: .gitignore  Main.hs  Makefile  default.nix  dslang.cabal  shell.nix
src/: Dslang.hs
src/Dslang/: Base.hs  Emit.hs  Grok.hs  Read.hs  Tree.hs
