name: dslang
version: 0.5
synopsis: A dapp definition language
homepage: https://github.com/dapphub/dslang
license: AGPL-3
license-file: COPYING
author: Mikael Brockman
maintainer: mikael@brockman.se
build-type: Simple
cabal-version: >=1.10

library
  hs-source-dirs: src
  default-language: Haskell2010
  exposed-modules:
    Dslang,
    Dslang.Base,
    Dslang.Read,
    Dslang.Grok,
    Dslang.Emit,
    Dslang.Tree
  default-extensions:
    NoImplicitPrelude,
    OverloadedStrings,
    LambdaCase,
    DeriveDataTypeable
  build-depends:
    base == 4.*,
    bytestring,
    containers,
    trifecta,
    parsers,
    ghci-pretty,
    text,
    lens,
    mtl,
    pretty,
    symbex,
    unordered-containers,
    uniplate,
    hevm

executable dslangc
  main-is: Main.hs
  hs-source-dirs: .
  default-language: Haskell2010
  build-depends:
    base == 4.*,
    dslang,
    bytestring,
    containers,
    text
    
test-suite test
  default-language: Haskell2010
  hs-source-dirs: test
  type: exitcode-stdio-1.0
  main-is: Test.hs
  build-depends:
    base,
    bytestring,
    tasty,
    text,
    dslang
